software-store (0.1.4) UNRELEASED; urgency=low

  * software-store:
    - improve test if running from a local checkout (LP: #420784)
  * add animation to the pending view
  * merge from rugby471, lots of fix, many thanks!

 -- Michael Vogt <egon@top.ping.de>  Sat, 29 Aug 2009 09:27:17 +0200

software-store (0.1.3) karmic; urgency=low

  * deal with apps that require adding repositories (like
    the stuff from the partner repository)
  * exit when the main window is closed
  * debian/postrm:
    - fix bug on purge (LP: #420042)
  * softwarestore/app.py, data/ui/SoftwareStore.ui:
    - add launchpad integration help (if available)
  * softwarestore/view/viewswitcher.py:
    - reconnect to the daemon if it dies (e.g. because of
      inactivity) LP: #420124
  * softwarestore/view/appdetailsview.py:
    - show number of installed dependencies in the description
    - warn on removal if the application is a dependency of 
      ubuntu-desktop or if it has additional reverse dependencies
  * softwarestore/view/pkgview.py:
    - add new view that shows a bunch of packages with meta-information
  * softwarestore/app.py:
    - fix sensitive/insensitive state of the install/remove button
    - do not clean the navigation bar on "home" button click
      (thanks to rugby471)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 29 Aug 2009 00:28:58 +0200

software-store (0.1.2) karmic; urgency=low

  * softwarestore/view/appdetailsview.py:
    - fix crash when no canidate is available (LP: #419258)
  * softwarestore/view/catview.py:
    - fix markup escape issue (LP: #419263)
    - render the category text one pango shrink step smaller
  * softwarestore/view/appdetailsview.py:
    - ignore dbus errors resulting from canceling the authentication
      dialog (LP: #412269)
  * softwarestore/view/catview.py:
    - fix crash in non english languages when parsing the 
      applications.menu (LP: #419356)
  * improve the search entry (LP: #419740, LP: #419744) and do not